--- a/css/style.css
+++ b/css/style.css
@@ -7,57 +7,6 @@
 #title {
 	text-align: center;
 }
-html, body, .mainContainer {
-	width: 100%;
-	height: 100%;
-	font-family: Caesar Dressing, serif;
-}
-.mainContainer {
-	padding-top: 45px;
-}
-.tabs {
-	background-color: #333333;
-	color: white;
-	position: fixed;
-	top: 0;
-	left: 0;
-	height: 100%;
-	padding-top: 60px;
-	overflow-y: auto;
-	overflow-x: hidden;
-	list-style-type: none;
-	border-right: solid 1px #222222;
-	z-index: 997;
-	text-align: center;
-	width: 80px;
-	padding-left: 50px;
-}
-.tabs li {
-	text-align: center;
-	font-size: 1em;
-	position: relative;
-	left: -57px;
-	border-bottom: none;
-	width: 90px;
-	height: 80px;
-	cursor: pointer;
-	margin-bottom: 15px;
-	padding-top: 15px;
-	padding-bottom: 15px;
-	transition: background 0.2s;
-}
-.tabs li:hover {
-	background-color: #272727;
-}
-.tabs li .fa {
-	margin-right: 1px;
-	font-size: 37px;
-	/* font-weight: normal; */
-}
-.go-dropdown li {
-	cursor: pointer;
-}
-
 .pages {
 	width: 100%;
 	height: 100%;
@@ -67,118 +16,16 @@ html, body, .mainContainer {
 	opacity: 0;
 	width: 100%;
 	height: 100%;
-	padding-top: 55px;
-	padding-left: 60px;
-	padding-left: 90px;
+	padding-top: 120px;
+	padding-left: 10px;
+	padding-right: 10px;
 	position: fixed;
 	top: 0;
 	left: 0;
-	transition: opacity 0.2s;
 	overflow-y: scroll;
 	padding-right: 10px;
 }
 .open-page {
 	opacity: 1;
 	z-index: 996;
-}
-
-.upsell {
-	background: white;
-	position: fixed;
-	width: 96%;
-	height: 100%;
-	z-index: 2;
-	padding-left: 10px;
-}
-.upsell-row {
-	background: lightgray;
-	width: 750px;
-}
-.upsell-btn {
-	width: 100%;
-}
-
-.loadOverlay {
-	background: rgba(0, 0, 0, 0);
-	color: white;
-	font-size: 2em;
-	position: fixed;
-	top: 0;
-	left: 0;
-	/*opacity: 0.5;*/
-	padding-top: 150px;
-	text-align: center;
-	width: 100%;
-	height: 100%;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-o-user-select: none;
-	user-select: none;
-	z-index: -1 !important; /* hide */
-	transition: background 0.2s;
-}
-
-.showLoadOverlay {
-	background: rgba(0, 0, 0, 0.5);
-	z-index: 99999 !important; /* please be above the nav */
-}
-
-.modal {
-	z-index: 9999 !important; /* please be above everything but the loading thing */
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.smileBtn, .frownBtn, .ideaBtn {
-	cursor: pointer;
-}
-
-#feedback-msg {
-	width: 100%;
-	height: 100px;
-	resize: none;
-}
-
-#page-pref-btn {
-	background: #333333;
-	border-color: #222222;
-	color: white;
-	position: absolute;
-	left: 80px;
-	bottom: 0;
-	z-index: 1040;
-	text-decoration: none;
-}
-
-#page-pref-btn:hover {
-	background-color: #272727;
-}
-
-.loadWarn {
-	background: rgba(0, 0, 0, 0.65);
-	font-size: 0.7em;
-	margin: 0 auto;
-	opacity: 1;
-	padding: 5px;
-	width: 300px;
-	opacity: 0;
-	transition: opacity 0.2s;
-}
-
-.showLoadOverlay .loadWarn.showingLoadWarn {
-	opacity: 1;
-}
-
-.loadWarn button {
-	background: rgba(150, 150, 150, 0.95);
-	border: none;
-	border-radius: 2px;
-	font-size: 0.9em;
-	transition: background 0.2s;
-}
-
-.loadWarn button:hover {
-	background: rgba(100, 100, 100, 0.95);
 }
