--- a/css/style.css
+++ b/css/style.css
@@ -15,25 +15,13 @@ html, body, {
 #title, nav {
 	z-index: 999;
 }
-.pages {
-	width: 100%;
-	height: 100%;
-	padding-left: 50px;
+.article {
+	width: 50%;
+	padding: 10px;
 }
-.page {
-	opacity: 0;
-	width: 100%;
-	height: 100%;
-	padding-top: 120px;
-	padding-left: 10px;
-	padding-right: 10px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	overflow-y: scroll;
-	padding-right: 10px;
+#article-left {
+	float: left;
 }
-.open-page {
-	opacity: 1;
-	z-index: 996;
+#article-right {
+	float: right;
 }
