--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,23 @@
  * by RobotXLabs
  * Licensed under MIT
 */
-
+.article {
+  padding: 5px;
+}
+@media (min-width: 500px){
+  .article {
+    width: 50%;
+    padding-top: 50px;
+  }
+  #article-left {
+  	float: left;
+  	padding: 10px;
+  }
+  #article-right {
+  	float: right;
+    padding: 10px;
+  }
+}
 html, body, {
   width: 100%;
   height: 100%;
@@ -11,10 +27,6 @@ html, body, {
  }
 #title {
   text-align: center;
-}
-.article {
-  width: 50%;
-  padding-top: 50px;
 }
 .clear {
 	clear: both;
@@ -24,17 +36,6 @@ html, body, {
 }
 #ads > tbody > tr > td {
   padding: 7px;
-}
-.ad:hover {
-	display: block;
-}
-#article-left {
-	float: left;
-	padding: 10px;
-}
-#article-right {
-	float: right;
-  padding: 10px;
 }
 #eyeball {
   text-align: center;
@@ -56,5 +57,5 @@ table {
 	text-align: center;
 }
 .link {
-  list-style: none;
+  list-style-type: none;
 }
